# vla

./: Dockerfile  LICENSE  README.md  README.quickstart.md  pyproject.toml  requirements.txt
configs/: config.yaml
examples/: README.md  ai2thor_demo.py  aloha_demo.py  eval_gr00t.py  mujoco_rl_example.py  omniverse_minimal_demo.py  omniverse_start.py  pybullet_demo.py  reachy_demo.py  run_demo.sh  two_arm_demo.py
src/lerobot/: __init__.py  cli.py  dataset.py  deploy.py  evaluate.py  evaluator.py  model.py  trainer.py
src/lerobot/algorithms/: __init__.py  aloha.py
src/lerobot/envs/: __init__.py  ai2thor_env.py  pybullet_env.py  reachy_env.py
tools/: list_urdfs.py
